update config-schema and default data

--- a/default-data.yaml
+++ b/default-data.yaml
@@ -2,9 +2,9 @@ spark-hadoop-master-expected-from-site-level-config:
     spark_hadoop_master_default_var_spark_event_log_enabled: false
     spark_hadoop_master_default_var_spark_event_log_dir: false
     spark_hadoop_master_default_var_hdfs_dfs_replication: 1
-    spark_hadoop_master_default_var_yarn.app.mapreduce.am.resource.mb: 128
-    spark_hadoop_master_default_var_mapreduce.map.memory.mb: 64
-    spark_hadoop_master_default_var_mapreduce.reduce.memory.mb: 64
-    spark_hadoop_master_default_var_yarn.nodemanager.resource.memory-mb: 384
-    spark_hadoop_master_default_var_yarn.scheduler.maximum-allocation-mb: 384
-    spark_hadoop_master_default_var_yarn.scheduler.minimum-allocation-mb: 32
+    spark_hadoop_master_default_var_yarn_app_mapreduce_am_resource_mb: 512
+    spark_hadoop_master_default_var_mapreduce_map_memory_mb: 256
+    spark_hadoop_master_default_var_mapreduce_reduce_memory_mb: 256
+    spark_hadoop_master_default_var_yarn_nodemanager_resource_memory_mb: 1536
+    spark_hadoop_master_default_var_yarn_scheduler_maximum_allocation_mb: 1536
+    spark_hadoop_master_default_var_yarn_scheduler_minimum_allocation_mb: 128
