--- a/sh/pre_config/requirements.txt
+++ b/sh/pre_config/requirements.txt
@@ -1,8 +1,9 @@
 Babel==2.6.0
-pbr==4.3.0
+dicttoxml==1.7.4
+pbr==5.1.3
 ply==3.11
-python-dateutil==2.7.3
-pytz==2018.5
-PyYAML==3.13
-six==1.11.0
+python-dateutil==2.8.0
+pytz==2019.1
+PyYAML==5.1
+six==1.12.0
 yaql==1.1.3
