--- a/default-data.yaml
+++ b/default-data.yaml
@@ -1,5 +1,5 @@
 spark-hadoop-master-expected-from-site-level-config:
-    spark_hadoop_master_default_var_spark_event_log_enabled: false
+    spark_hadoop_master_default_var_spark_event_log_enabled: true
     spark_hadoop_master_default_var_spark_event_log_dir: spark-logs
     spark_hadoop_master_default_var_hdfs_dfs_replication: 1
     spark_hadoop_master_default_var_yarn_app_mapreduce_am_resource_mb: 512
