--- a/sh/Dockerfile
+++ b/sh/Dockerfile
@@ -20,10 +20,10 @@ RUN wget https://www-eu.apache.org/dist/spark/spark-2.4.1/spark-2.4.1-bin-hadoop
 ## ssh and net-tools
 RUN yum -y install iproute openssh openssh-server openssh-clients openssl-libs net-tools;yum clean all;
 RUN mkdir /root/.ssh && chmod 700 /root/.ssh
-COPY ./data/id_rsa /root/.ssh
-COPY ./data/id_rsa.pub /root/.ssh
+COPY ./config/id_rsa /root/.ssh
+COPY ./config/id_rsa.pub /root/.ssh
 RUN chmod 600 /root/.ssh/id_rsa && chmod 644 /root/.ssh/id_rsa.pub
-COPY ./data/authorized_keys /root/.ssh/authorized_keys
+COPY ./config/authorized_keys /root/.ssh/authorized_keys
 RUN chmod 600 /root/.ssh/authorized_keys
 
 # Hadoop Conf
