--- a/sh/config/spark-defaults.conf
+++ b/sh/config/spark-defaults.conf
@@ -1,5 +1,5 @@
 spark.master yarn
-spark.event.log.enabled false
+spark.event.log.enabled true
 spark.event.log.dir spark-logs
 spark.driver.memory 1g
 spark.yarn.am.memory 512m
