--- a/sh/config/spark-defaults.conf
+++ b/sh/config/spark-defaults.conf
@@ -2,9 +2,9 @@ spark.master yarn
 spark.event.log.enabled true
 spark.event.log.dir spark-logs
 spark.driver.memory 1g
-spark.yarn.am.memory 512m
+spark.yarn.am.memory 1g
 spark.executor.memory 1g
 spark.history.provider org.apache.spark.deploy.history.FsHistoryProvider
-spark.history.fs.logDirectory hdfs://spark_hadoop_master.cern.ch:9000/spark-logs
+spark.history.fs.logDirectory hdfs://spark-hadoop-master.cern.ch:9000/spark-logs
 spark.history.fs.update.interval 30s
 spark.history.ui.port 18080
