--- a/default-data.yaml
+++ b/default-data.yaml
@@ -1,10 +1,15 @@
 spark-hadoop-master-expected-from-site-level-config:
+    spark_hadoop_master_default_var_hdfs_dfs_replication: &spark_hadoop_master_default_var_hdfs_dfs_replication 1
+    spark_hadoop_master_default_var_yarn_app_mapreduce_am_resource_mb: &spark_hadoop_master_default_var_yarn_app_mapreduce_am_resource_mb 1024
+    spark_hadoop_master_default_var_mapreduce_map_memory_mb: &spark_hadoop_master_default_var_mapreduce_map_memory_mb 1024
+    spark_hadoop_master_default_var_mapreduce_reduce_memory_mb: &spark_hadoop_master_default_var_mapreduce_reduce_memory_mb 1024
+    spark_hadoop_master_default_var_yarn_nodemanager_resource_memory_mb: &spark_hadoop_master_default_var_yarn_nodemanager_resource_memory_mb 3072
+    spark_hadoop_master_default_var_yarn_scheduler_maximum_allocation_mb: &spark_hadoop_master_default_var_yarn_scheduler_maximum_allocation_mb 3072
+    spark_hadoop_master_default_var_yarn_scheduler_minimum_allocation_mb: &spark_hadoop_master_default_var_yarn_scheduler_minimum_allocation_mb 256
     spark_hadoop_master_default_var_spark_event_log_enabled: &spark_hadoop_master_default_var_spark_event_log_enabled true
     spark_hadoop_master_default_var_spark_event_log_dir: &spark_hadoop_master_default_var_spark_event_log_dir spark-logs
-    spark_hadoop_master_default_var_hdfs_dfs_replication: &spark_hadoop_master_default_var_hdfs_dfs_replication 1
-    spark_hadoop_master_default_var_yarn_app_mapreduce_am_resource_mb: &spark_hadoop_master_default_var_yarn_app_mapreduce_am_resource_mb 512
-    spark_hadoop_master_default_var_mapreduce_map_memory_mb: &spark_hadoop_master_default_var_mapreduce_map_memory_mb 256
-    spark_hadoop_master_default_var_mapreduce_reduce_memory_mb: &spark_hadoop_master_default_var_mapreduce_reduce_memory_mb 256
-    spark_hadoop_master_default_var_yarn_nodemanager_resource_memory_mb: &spark_hadoop_master_default_var_yarn_nodemanager_resource_memory_mb 1536
-    spark_hadoop_master_default_var_yarn_scheduler_maximum_allocation_mb: &spark_hadoop_master_default_var_yarn_scheduler_maximum_allocation_mb 1536
-    spark_hadoop_master_default_var_yarn_scheduler_minimum_allocation_mb: &spark_hadoop_master_default_var_yarn_scheduler_minimum_allocation_mb 128
+    spark_hadoop_master_default_var_spark_driver_memory: &spark_hadoop_master_default_var_spark_driver_memory 1g
+    spark_hadoop_master_default_var_spark_executor_memory: &spark_hadoop_master_default_var_spark_executor_memory 1g
+    spark_hadoop_master_default_var_spark_yarn_am_memory: &spark_hadoop_master_default_var_spark_yarn_am_memory 1g
+    spark_hadoop_master_default_var_spark_history_fs_log_directory: &spark_hadoop_master_default_var_spark_history_fs_log_directory spark-logs
+    spark_hadoop_master_default_var_spark_history_fs_update_interval: &spark_hadoop_master_default_var_spark_history_fs_update_interval 30s
