update augmented site level config file

--- a/augmented_site_level_config_file.yaml
+++ b/augmented_site_level_config_file.yaml
@@ -1,15 +1,18 @@
 spark-hadoop-master-expected-from-site-level-config:
+  spark_hadoop_master_default_var_hdfs_dfs_replication: 1
+  spark_hadoop_master_default_var_yarn_app_mapreduce_am_resource_mb: 1024
+  spark_hadoop_master_default_var_mapreduce_map_memory_mb: 1024
+  spark_hadoop_master_default_var_mapreduce_reduce_memory_mb: 1024
+  spark_hadoop_master_default_var_yarn_nodemanager_resource_memory_mb: 3072
+  spark_hadoop_master_default_var_yarn_scheduler_maximum_allocation_mb: 3072
+  spark_hadoop_master_default_var_yarn_scheduler_minimum_allocation_mb: 256
   spark_hadoop_master_default_var_spark_event_log_enabled: true
   spark_hadoop_master_default_var_spark_event_log_dir: spark-logs
-  spark_hadoop_master_default_var_hdfs_dfs_replication: 1
-  spark_hadoop_master_default_var_yarn_app_mapreduce_am_resource_mb: 512
-  spark_hadoop_master_default_var_mapreduce_map_memory_mb: 256
-  spark_hadoop_master_default_var_mapreduce_reduce_memory_mb: 256
-  spark_hadoop_master_default_var_yarn_nodemanager_resource_memory_mb: 1536
-  spark_hadoop_master_default_var_yarn_scheduler_maximum_allocation_mb: 1536
-  spark_hadoop_master_default_var_yarn_scheduler_minimum_allocation_mb: 128
-spark_hadoop_worker_runtime_variables:
-- spark-hadoop-master.cern.ch
+  spark_hadoop_master_default_var_spark_driver_memory: 1g
+  spark_hadoop_master_default_var_spark_executor_memory: 1g
+  spark_hadoop_master_default_var_spark_yarn_am_memory: 1g
+  spark_hadoop_master_default_var_spark_history_fs_log_directory: spark-logs
+  spark_hadoop_master_default_var_spark_history_fs_update_interval: 30s
 default_group_opssgm:
   gid: 46001
   name: opssgm
@@ -48,27 +51,14 @@ default_pool_accounts_dteam:
     gid: 2688
     name: dteam
   secondary_groups: []
-default_vo_dteam:
-  name: dteam
-  servers:
-  - server: voms2.cern.ch
-    port: '15001'
-    dn: /DC=ch/DC=cern/OU=computers/CN=voms2.cern.ch
-    ca_dn: /DC=ch/DC=cern/CN=CERN Grid Certification Authority
-  - server: lcg-voms2.cern.ch
-    port: '15001'
-    dn: /DC=ch/DC=cern/OU=computers/CN=lcg-voms2.cern.ch
-    ca_dn: /DC=ch/DC=cern/CN=CERN Grid Certification Authority
-  default_se: not_used.some-domain
-  sw_dir: .
-  storage_dir: /storage/dteam
+default_vo_generic_dn_server_secondary: /DC=ch/DC=cern/OU=computers/CN=lcg-voms2.cern.ch
 default_group_ops:
   gid: 45000
   name: ops
 default_group_alicesgm_name: alicesgm
 spark-hadoop-worker-expected-from-site-level-config:
-  spark_hadoop_worker_default_var_fs_default_name: spark-hadoop-master.cern.ch
-  spark_hadoop_worker_default_var_yarn_resource_manager_hostname: spark-hadoop-master.cern.ch
+  spark_hadoop_worker_default_var_fs_default_name: spark-hadoop-master-0.cern.ch
+  spark_hadoop_worker_default_var_yarn_resource_manager_hostname: spark-hadoop-master-0.cern.ch
   spark_hadoop_worker_default_var_hdfs_dfs_replication: 1
   spark_hadoop_worker_default_var_yarn_app_mapreduce_am_resource_mb: 512
   spark_hadoop_worker_default_var_mapreduce_map_memory_mb: 256
@@ -78,16 +68,24 @@ spark-hadoop-worker-expected-from-site-level-config:
   spark_hadoop_worker_default_var_yarn_scheduler_minimum_allocation_mb: 128
   spark_hadoop_worker_default_var_spark_event_log_enabled: true
   spark_hadoop_worker_default_var_spark_event_log_dir: spark-logs
-  spark_hadoop_worker_default_var_spark_driver_memory: 512m
-  spark_hadoop_worker_default_var_spark_executor_memory: 512m
-  spark_hadoop_worker_default_var_spark_yarn_am_memory: 512m
+  spark_hadoop_worker_default_var_spark_driver_memory: 1g
+  spark_hadoop_worker_default_var_spark_executor_memory: 1g
+  spark_hadoop_worker_default_var_spark_yarn_am_memory: 1g
   spark_hadoop_worker_default_var_spark_history_fs_log_directory: spark-logs
   spark_hadoop_worker_default_var_spark_history_fs_update_interval: 30s
 site_infrastructure:
-- fqdn: spark-hadoop-master.cern.ch
-  ip_address: 188.185.104.49
-- fqdn: spark-hadoop-worker.cern.ch
-  ip_address: 188.184.85.219
+- fqdn: spark-hadoop-master-0.cern.ch
+  ip_address: 188.184.91.176
+- fqdn: spark-hadoop-worker-0.cern.ch
+  ip_address: 188.184.88.69
+- fqdn: spark-hadoop-add-1-worker.cern.ch
+  ip_address: 188.184.83.48
+- fqdn: spark-hadoop-add-2-worker.cern.ch
+  ip_address: 188.185.76.205
+- fqdn: spark-hadoop-add-3-worker.cern.ch
+  ip_address: 188.184.86.181
+- fqdn: spark-hadoop-submit.cern.ch
+  ip_address: 188.185.71.78
 default_pool_accounts_dteamsgm:
   base_name: sgmdtm
   initial_uid: 60501
@@ -135,7 +133,22 @@ default_vo_ops:
 default_group_dteam:
   gid: 2688
   name: dteam
-default_vo_generic_dn_server_secondary: /DC=ch/DC=cern/OU=computers/CN=lcg-voms2.cern.ch
+spark_worker_runtime_variables:
+- spark-hadoop-master-0.cern.ch
+default_vo_dteam:
+  name: dteam
+  servers:
+  - server: voms2.cern.ch
+    port: '15001'
+    dn: /DC=ch/DC=cern/OU=computers/CN=voms2.cern.ch
+    ca_dn: /DC=ch/DC=cern/CN=CERN Grid Certification Authority
+  - server: lcg-voms2.cern.ch
+    port: '15001'
+    dn: /DC=ch/DC=cern/OU=computers/CN=lcg-voms2.cern.ch
+    ca_dn: /DC=ch/DC=cern/CN=CERN Grid Certification Authority
+  default_se: not_used.some-domain
+  sw_dir: .
+  storage_dir: /storage/dteam
 meta_info_spark-hadoop-worker:
   component: spark-hadoop-worker
   type: spark_hadoop_worker
@@ -145,12 +158,30 @@ meta_info_spark-hadoop-worker:
   default_var_prefix: spark_hadoop_worker_default_var
   runtime_vars:
   - spark_hadoop_worker_runtime_var_spark_hadoop_master_fqdn
+  host_requirements:
+    firewall:
+    - ports: 8042
+      protocol: tcp
+      action: accept
+      ipv6: true
+    - ports: 19888
+      protocol: tcp
+      action: accept
+      ipv6: true
+    - ports: 42252
+      protocol: tcp
+      action: accept
+      ipv6: true
   docker_run_parameters:
     hostname: container_fqdn
     privileged: true
     detached: true
     tty: true
     ssh_client: true
+    ports:
+    - 8042:8042
+    - 19888:19888
+    - 42252:42252
 default_pool_account_ops:
   base_name: ops
   initial_uid: 45001
@@ -177,69 +208,179 @@ default_group_opssgm_name: opssgm
 default_vo_generic_dn_server_primary: /DC=ch/DC=cern/OU=computers/CN=voms2.cern.ch
 default_vo_generic_server_secondary: lcg-voms2.cern.ch
 lightweight_components:
-- name: spark-hadoop-master
-  deploy:
-    node: spark-hadoop-master.cern.ch
-    container_count: 1
-  config:
-    spark_history_fs_log_directory: hdfs://spark-hadoop-master.cern.ch:9000/spark-logs
-    spark_executor_memory: 1g
-    yarn_scheduler_maximum_allocation_mb: 1536
-    spark_event_log_dir: spark-logs
-    spark_driver_memory: 1g
-    yarn_app_mapreduce_am_resource_mb: 512
-    yarn_nodemanager_resource_memory_mb: 1536
-    spark_history_fs_update_interval: 30s
-    yarn_scheduler_minimum_allocation_mb: 128
-    hdfs_dfs_replication: 1
-    mapreduce_map_memory_mb: 256
-    spark_event_log_enabled: true
-    spark_yarn_am_memory: 512m
-    mapreduce_reduce_memory_mb: 256
-  repository_revision: master
-  supplemental_config:
-    spark-defaults.conf:
-    - spark.driver.cores 1
-  repository_url: https://github.com/maany/simple_spark_cluster_master
-  type: spark_hadoop_master
-  container_count: 1
-  id: 0
-  execution_id: 0
 - name: spark-hadoop-worker
   deploy:
-    node: spark-hadoop-worker.cern.ch
+    node: spark-hadoop-worker-0.cern.ch
     container_count: 1
   config:
     spark_history_fs_log_directory: spark-logs
     spark_event_log_enabled: true
     spark_event_log_dir: spark-logs
     yarn_scheduler_maximum_allocation_mb: 1536
-    spark_driver_memory: 512m
+    spark_driver_memory: 1g
     yarn_app_mapreduce_am_resource_mb: 512
     yarn_nodemanager_resource_memory_mb: 1536
-    spark_yarn_am_memory: 512m
+    spark_yarn_am_memory: 1g
     spark_history_fs_update_interval: 30s
     yarn_scheduler_minimum_allocation_mb: 128
     hdfs_dfs_replication: 1
     mapreduce_map_memory_mb: 256
-    spark_executor_memory: 512m
-    fs_default_name: spark-hadoop-master.cern.ch
-    yarn_resource_manager_hostname: spark-hadoop-master.cern.ch
+    spark_executor_memory: 1g
+    fs_default_name: spark-hadoop-master-0.cern.ch
+    yarn_resource_manager_hostname: spark-hadoop-master-0.cern.ch
     mapreduce_reduce_memory_mb: 256
   repository_revision: master
-  supplemental_config:
-    spark-defaults.conf:
-    - spark.driver.cores 1
   repository_url: https://github.com/maany/simple_spark_cluster_worker
   type: spark_hadoop_worker
   container_count: 1
-  id: 1
+  id: 0
+  execution_id: 0
+- name: spark-hadoop-worker
+  deploy:
+    node: spark-hadoop-add-1-worker.cern.ch
+    container_count: 1
+  config:
+    spark_history_fs_log_directory: spark-logs
+    spark_event_log_enabled: true
+    spark_event_log_dir: spark-logs
+    yarn_scheduler_maximum_allocation_mb: 1536
+    spark_driver_memory: 1g
+    yarn_app_mapreduce_am_resource_mb: 512
+    yarn_nodemanager_resource_memory_mb: 1536
+    spark_yarn_am_memory: 1g
+    spark_history_fs_update_interval: 30s
+    yarn_scheduler_minimum_allocation_mb: 128
+    hdfs_dfs_replication: 1
+    mapreduce_map_memory_mb: 256
+    spark_executor_memory: 1g
+    fs_default_name: spark-hadoop-master-0.cern.ch
+    yarn_resource_manager_hostname: spark-hadoop-master-0.cern.ch
+    mapreduce_reduce_memory_mb: 256
+  repository_revision: master
+  repository_url: https://github.com/maany/simple_spark_cluster_worker
+  type: spark_hadoop_worker
+  container_count: 1
+  id: 0
   execution_id: 1
+- name: spark-hadoop-worker
+  deploy:
+    node: spark-hadoop-add-2-worker.cern.ch
+    container_count: 1
+  config:
+    spark_history_fs_log_directory: spark-logs
+    spark_event_log_enabled: true
+    spark_event_log_dir: spark-logs
+    yarn_scheduler_maximum_allocation_mb: 1536
+    spark_driver_memory: 1g
+    yarn_app_mapreduce_am_resource_mb: 512
+    yarn_nodemanager_resource_memory_mb: 1536
+    spark_yarn_am_memory: 1g
+    spark_history_fs_update_interval: 30s
+    yarn_scheduler_minimum_allocation_mb: 128
+    hdfs_dfs_replication: 1
+    mapreduce_map_memory_mb: 256
+    spark_executor_memory: 1g
+    fs_default_name: spark-hadoop-master-0.cern.ch
+    yarn_resource_manager_hostname: spark-hadoop-master-0.cern.ch
+    mapreduce_reduce_memory_mb: 256
+  repository_revision: master
+  repository_url: https://github.com/maany/simple_spark_cluster_worker
+  type: spark_hadoop_worker
+  container_count: 1
+  id: 0
+  execution_id: 2
+- name: spark-hadoop-worker
+  deploy:
+    node: spark-hadoop-add-3-worker.cern.ch
+    container_count: 1
+  config:
+    spark_history_fs_log_directory: spark-logs
+    spark_event_log_enabled: true
+    spark_event_log_dir: spark-logs
+    yarn_scheduler_maximum_allocation_mb: 1536
+    spark_driver_memory: 1g
+    yarn_app_mapreduce_am_resource_mb: 512
+    yarn_nodemanager_resource_memory_mb: 1536
+    spark_yarn_am_memory: 1g
+    spark_history_fs_update_interval: 30s
+    yarn_scheduler_minimum_allocation_mb: 128
+    hdfs_dfs_replication: 1
+    mapreduce_map_memory_mb: 256
+    spark_executor_memory: 1g
+    fs_default_name: spark-hadoop-master-0.cern.ch
+    yarn_resource_manager_hostname: spark-hadoop-master-0.cern.ch
+    mapreduce_reduce_memory_mb: 256
+  repository_revision: master
+  repository_url: https://github.com/maany/simple_spark_cluster_worker
+  type: spark_hadoop_worker
+  container_count: 1
+  id: 0
+  execution_id: 3
+- name: spark-hadoop-worker
+  deploy:
+    node: spark-hadoop-submit.cern.ch
+    container_count: 1
+  config:
+    spark_history_fs_log_directory: spark-logs
+    spark_event_log_enabled: true
+    spark_event_log_dir: spark-logs
+    yarn_scheduler_maximum_allocation_mb: 1536
+    spark_driver_memory: 1g
+    yarn_app_mapreduce_am_resource_mb: 512
+    yarn_nodemanager_resource_memory_mb: 1536
+    spark_yarn_am_memory: 1g
+    spark_history_fs_update_interval: 30s
+    yarn_scheduler_minimum_allocation_mb: 128
+    hdfs_dfs_replication: 1
+    mapreduce_map_memory_mb: 256
+    spark_executor_memory: 1g
+    fs_default_name: spark-hadoop-master-0.cern.ch
+    yarn_resource_manager_hostname: spark-hadoop-master-0.cern.ch
+    mapreduce_reduce_memory_mb: 256
+  repository_revision: master
+  repository_url: https://github.com/maany/simple_spark_cluster_worker
+  type: spark_hadoop_worker
+  container_count: 1
+  id: 0
+  execution_id: 4
+- name: spark-hadoop-master
+  deploy:
+    node: spark-hadoop-master-0.cern.ch
+    container_count: 1
+  config:
+    spark_history_fs_log_directory: spark-logs
+    spark_executor_memory: 1g
+    yarn_scheduler_maximum_allocation_mb: 3072
+    spark_event_log_dir: spark-logs
+    spark_driver_memory: 1g
+    yarn_app_mapreduce_am_resource_mb: 1024
+    yarn_nodemanager_resource_memory_mb: 3072
+    spark_history_fs_update_interval: 30s
+    yarn_scheduler_minimum_allocation_mb: 256
+    hdfs_dfs_replication: 1
+    mapreduce_map_memory_mb: 1024
+    spark_event_log_enabled: true
+    spark_yarn_am_memory: 1g
+    mapreduce_reduce_memory_mb: 1024
+  repository_revision: master
+  repository_url: https://github.com/maany/simple_spark_cluster_master
+  type: spark_hadoop_master
+  container_count: 1
+  id: 1
+  execution_id: 5
 global_variables:
-- 188.185.104.49
-- spark-hadoop-master.cern.ch
-- 188.184.85.219
-- spark-hadoop-worker.cern.ch
+- 188.184.91.176
+- spark-hadoop-master-0.cern.ch
+- 188.184.88.69
+- spark-hadoop-worker-0.cern.ch
+- 188.184.83.48
+- spark-hadoop-add-1-worker.cern.ch
+- 188.185.76.205
+- spark-hadoop-add-2-worker.cern.ch
+- 188.184.86.181
+- spark-hadoop-add-3-worker.cern.ch
+- 188.185.71.78
+- spark-hadoop-submit.cern.ch
 meta_info_spark-hadoop-master:
   component: spark-hadoop-master
   type: spark_hadoop_master
@@ -293,17 +434,40 @@ meta_info_spark-hadoop-master:
     ssh_server: true
     ssh_client: true
 default_group_dteam_name: dteam
-
 dns:
-- container_fqdn: spark-hadoop-master.cern.ch
-  host_fqdn: spark-hadoop-master.cern.ch
-  host_ip: 188.185.104.49
+- container_fqdn: spark-hadoop-master-0.cern.ch
+  host_fqdn: spark-hadoop-master-0.cern.ch
+  host_ip: 188.184.91.176
   container_ip: 10.0.0.10
   type: spark_hadoop_master
-  execution_id: 0
-- container_fqdn: spark_hadoop_worker_localhost01_1.cern.ch
-  host_fqdn: spark_hadoop_worker.cern.ch
-  host_ip: 188.184.85.219
+  execution_id: 5
+- container_fqdn: spark-hadoop-worker-0.cern.ch
+  host_fqdn: spark-hadoop-worker-0.cern.ch
+  host_ip: 188.184.88.69
   container_ip: 10.0.0.11
   type: spark_hadoop_worker
+  execution_id: 0
+- container_fqdn: spark-hadoop-add-1-worker.cern.ch
+  host_fqdn: spark-hadoop-add-1-worker.cern.ch
+  host_ip: 188.184.83.48
+  container_ip: 10.0.0.12
+  type: spark_hadoop_worker
   execution_id: 1
+- container_fqdn: spark-hadoop-add-2-worker.cern.ch
+  host_fqdn: spark-hadoop-add-2-worker.cern.ch
+  host_ip: 188.185.76.205
+  container_ip: 10.0.0.13
+  type: spark_hadoop_worker
+  execution_id: 2
+- container_fqdn: spark-hadoop-add-3-worker.cern.ch
+  host_fqdn: spark-hadoop-add-3-worker.cern.ch
+  host_ip: 188.184.86.181
+  container_ip: 10.0.0.14
+  type: spark_hadoop_worker
+  execution_id: 3
+- container_fqdn: spark-hadoop-submit.cern.ch
+  host_fqdn: spark-hadoop-submit.cern.ch
+  host_ip: 188.185.71.78
+  container_ip: 10.0.0.15
+  type: spark_hadoop_worker
+  execution_id: 4
