--- a/meta-info.yaml
+++ b/meta-info.yaml
@@ -35,6 +35,10 @@ host_requirements:
       protocol: tcp
       action: accept
       ipv6: true
+    - ports: 8088
+      protocol: tcp
+      action: accept
+      ipv6: true
 docker_run_parameters:
   hostname: host_fqdn
   privileged: true
@@ -48,5 +52,6 @@ docker_run_parameters:
       - "8088:8088"
       - "18080:18080"
       - "9000:9000"
+      - "8088:8088"
   ssh_server: true
   ssh_client: true
