--- a/meta-info.yaml
+++ b/meta-info.yaml
@@ -39,6 +39,10 @@ host_requirements:
       protocol: tcp
       action: accept
       ipv6: true
+    - ports: 8888
+      protocol: tcp
+      action: accept
+      ipv6: true
 docker_run_parameters:
   hostname: host_fqdn
   privileged: true
@@ -53,5 +57,6 @@ docker_run_parameters:
       - "18080:18080"
       - "9000:9000"
       - "8088:8088"
+      - "8888:8888"
   ssh_server: true
   ssh_client: true
